--- a/index/works.yml
+++ b/index/works.yml
@@ -300,3 +300,23 @@ ZW:
   source: Gemeinsamer Bibliotheksverbund ISBN
   title: Die Zeit des Weltbildes
   type: chapter
+EM:
+  author:
+  - family: Heidegger
+    given: Martin
+  citation-key: heideggerEinfuehrungMetaphysik1983
+  collection-number: band 40
+  collection-title: Gesamtausgabe
+  editor:
+  - family: Jaeger
+    given: Petra
+  event-place: Frankfurt am Main
+  id: heideggerSatzVomGrund1997
+  issued:
+    date-parts:
+    - - 1983
+  language: ger
+  publisher: Vittorio Klostermann
+  publisher-place: Frankfurt am Main
+  title: Einführung in die Metaphysik
+  type: book
