--- a/index/heidegger-index.yml
+++ b/index/heidegger-index.yml
@@ -463,6 +463,7 @@ Entbergen:
     - end: 455
       start: 453
     - start: 490
+    - start: 41
     WBPh:
     - start: 277
     - start: 299
@@ -542,6 +543,8 @@ Fragment 1 (Heraklit):
 Fragment 123 (Heraklit):
   author: Heraklit
   references:
+    GA 29/30:
+    - start: 41
     WBPh:
     - start: 298
   related:
@@ -573,6 +576,8 @@ Fragment 52 (Heraklit):
 Fragment 93 (Heraklit):
   author: Heraklit
   references:
+    GA 29/30:
+    - start: 40
     WBPh:
     - start: 277
   type: w
@@ -968,10 +973,11 @@ Hölderlin, Friedrich:
     - start: 273
     - start: 276
   type: p
-Inbegrif:
+Inbegriff:
   references:
     GA 29/30:
     - start: 13
+    - start: 36
 Infinitiv:
   references:
     EM:
@@ -1137,6 +1143,8 @@ Mensch:
     - start: 6
     - start: 7
     - start: 10
+    - start: 39
+    - start: 40
     SvG:
     - start: 176
     - start: 189
@@ -1169,6 +1177,8 @@ Metaphysik:
       start: 6
     - end: 13
       start: 9
+    - end: 38
+      start: 36
     SvG:
     - start: 184
     WD:
@@ -1239,6 +1249,8 @@ Natur:
     GA 29/30:
     - end: 404
       start: 402
+    - end: 39
+      start: 38
     SvG:
     - start: 178
     WBPh:
@@ -1371,6 +1383,8 @@ Philosophie:
       start: 6
     - end: 13
       start: 9
+    - end: 37
+      start: 36
 Philosophieren:
   references:
     EM:
@@ -1578,6 +1592,11 @@ Seiende im Ganzen:
     - start: 283
   related:
   - im Ganzen
+Seienden im Ganzen:
+  references:
+    GA 29/30:
+    - end: 39
+      start: 38
 Seiendheit:
   references:
     WBPh:
@@ -1861,6 +1880,11 @@ Urteil:
     - start: 173
     - start: 174
     - start: 175
+Urwort:
+  references:
+    GA 29/30:
+    - end: 38
+      start: 37
 Verbergen:
   references:
     GA 29/30:
@@ -1870,6 +1894,7 @@ Verbergen:
     - end: 455
       start: 453
     - start: 490
+    - start: 41
 Verbum:
   references:
     EM:
@@ -1946,6 +1971,10 @@ Wachsen:
   references:
     WBPh:
     - start: 287
+Wachstum:
+  references:
+    GA 29/30:
+    - start: 38
 Wagnis:
   references:
     WD:
@@ -1957,6 +1986,11 @@ Wahrheit:
   references:
     SvG:
     - start: 173
+Walten:
+  references:
+    GA 29/30:
+    - end: 40
+      start: 38
 Warum:
   references:
     SvG:
@@ -2075,6 +2109,7 @@ Wort:
     GA 29/30:
     - end: 447
       start: 446
+    - start: 40
 Zeitalter:
   references:
     SvG:
@@ -2168,6 +2203,10 @@ causa:
   references:
     SvG:
     - start: 165
+das Wachsende:
+  references:
+    GA 29/30:
+    - start: 38
 der Feldberg:
   references:
     GA 55:
@@ -2240,6 +2279,8 @@ natura:
   references:
     EM:
     - start: 15
+    GA 29/30:
+    - start: 38
     SvG:
     - start: 40
     WBPh:
@@ -2503,6 +2544,8 @@ weil:
     - start: 168
 λέγειν:
   references:
+    GA 29/30:
+    - start: 41
     SvG:
     - start: 160
     - start: 161
@@ -2528,6 +2571,8 @@ weil:
       start: 484
     - end: 491
       start: 487
+    - end: 41
+      start: 40
     SvG:
     - start: 158
     - start: 159
@@ -2688,6 +2733,14 @@ weil:
   references:
     WBPh:
     - start: 246
+φυσικά:
+  references:
+    GA 29/30:
+    - start: 38
+φύειν:
+  references:
+    GA 29/30:
+    - start: 38
 φύσει ὄντα:
   parent: φύσις
   references:
@@ -2714,6 +2767,8 @@ weil:
     GA 29/30:
     - start: 38
       suffix: ff
+    - end: 41
+      start: 38
     HH:
     - start: 145
     SvG:
@@ -2739,6 +2794,8 @@ weil:
     - end: 278
       start: 277
   related:
+  - φυσικά
+  - φύειν
   - Physica
   - Natur
 ψεύδεσθαι:
