--- a/index/heidegger-index.yml
+++ b/index/heidegger-index.yml
@@ -570,6 +570,9 @@ Fragment 52 (Heraklit):
     - start: 280
   related:
   - Weltzeit
+  - αἰών
+  - Geschick
+  type: w
 Fragment 93 (Heraklit):
   author: Heraklit
   references:
