--- a/index/heidegger-index.yml
+++ b/index/heidegger-index.yml
@@ -570,7 +570,7 @@ Fragment 52 (Heraklit):
     - start: 280
   related:
   - Weltzeit
-  - αἰών
+  - αἰών
   - Geschick
   type: w
 Fragment 93 (Heraklit):
