--- a/index/heidegger-index.yml
+++ b/index/heidegger-index.yml
@@ -144,6 +144,8 @@ Atomzeitalter:
     G:
     - end: 525
       start: 522
+    - start: 528
+    - start: 529
     SvG:
     - start: 178
     - start: 179
@@ -635,8 +637,11 @@ Gedankenlosigkeit:
     G:
     - end: 519
       start: 518
+    - start: 529
 Gefahr:
   references:
+    G:
+    - start: 528
     SvG:
     - start: 177
     WD:
@@ -665,8 +670,6 @@ Gegnet:
     - start: 47
 Geheimnis:
   references:
-    G:
-    - start: 528
     GA 29/30:
     - start: 255
     SvG:
@@ -678,12 +681,15 @@ Geist:
     - start: 241
 Gelassenheit:
   references:
-    G:
-    - start: 527
-    - start: 528
     ZEG:
     - start: 40
       suffix: ff
+Gelassenheit zu den Dingen:
+  parent: Gelassenheit
+  references:
+    G:
+    - end: 529
+      start: 527
 Gesang:
   references:
     WD:
@@ -754,6 +760,8 @@ Gleiche:
     - start: 278
 Gleichgültigkeit:
   references:
+    G:
+    - start: 528
     GA 29/30:
     - start: 367
       type: r
@@ -889,6 +897,7 @@ Hebel, Johann Peter:
   references:
     G:
     - start: 521
+    - start: 529
   type: p
 Hegel, Georg Wilhelm Friedrich:
   references:
@@ -1050,6 +1059,7 @@ Kreutzer, Conradin:
     G:
     - end: 518
       start: 517
+    - start: 529
   type: p
 Kritik der Reinen Vernunft:
   author: Kant, Immanuel
@@ -1252,6 +1262,8 @@ Nachdenken:
     G:
     - start: 521
     - start: 526
+    - end: 529
+      start: 528
 Natur:
   references:
     EM:
@@ -1356,6 +1368,12 @@ Offene:
     - start: 277
     - start: 284
     - start: 285
+Offenheit für das Geheimnis:
+  parent: Geheimnis
+  references:
+    G:
+    - end: 529
+      start: 528
 Optimismus:
   references:
     WD:
@@ -1522,6 +1540,11 @@ Reizbarkeit:
     GA 29/30:
     - end: 373
       start: 372
+Revolution der Technik:
+  parent: Technik
+  references:
+    G:
+    - start: 528
 Rilke, Rainer Maria:
   references:
     WD:
@@ -2099,6 +2122,8 @@ Wesen des Menschen:
   references:
     EWI:
     - start: 70
+    G:
+    - start: 529
     GA 29/30:
     - end: 408
       start: 406
@@ -2401,6 +2426,7 @@ rechnende Denken:
       start: 519
     - start: 523
     - start: 525
+    - start: 528
     SvG:
     - start: 178
   related:
