Add 'add_urn' command to add a urn to w/p metadata

--- a/index/heidegger-index.yml
+++ b/index/heidegger-index.yml
@@ -949,6 +949,8 @@ Herakles:
     - start: 269
   type: p
 Heraklit:
+  metadata:
+    cts_urn: urn:cts:greekLit:tlg0626
   references:
     EM:
     - start: 66
