--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,5 @@ Unidecode==1.*
 django-extensions==3.*
 fuzzysearch==0.7.3
 Markdown==3.3.6
+pyCTS==0.2.2
+hucitlib @ https://github.com/mromanello/hucitlib/tarball/master 
