Add urns to Heraklits works

--- a/index/heidegger-index.yml
+++ b/index/heidegger-index.yml
@@ -555,6 +555,8 @@ Fragment 1 (Heraklit):
   type: w
 Fragment 112 (Heraklit):
   author: Heraklit
+  metadata:
+    cts_urn: urn:cts:greekLit:tlg0626.tlg002:112
   references:
     GA 29/30:
     - start: 41
@@ -562,6 +564,8 @@ Fragment 112 (Heraklit):
   type: w
 Fragment 123 (Heraklit):
   author: Heraklit
+  metadata:
+    cts_urn: urn:cts:greekLit:tlg0626.tlg002:123
   references:
     GA 29/30:
     - start: 41
@@ -580,6 +584,8 @@ Fragment 2 (Heraklit):
   type: w
 Fragment 30 (Heraklit):
   author: Heraklit
+  metadata:
+    cts_urn: urn:cts:greekLit:tlg0626.tlg002:30
   references:
     GA 29/30:
     - start: 47
@@ -588,6 +594,8 @@ Fragment 30 (Heraklit):
   type: w
 Fragment 52 (Heraklit):
   author: Heraklit
+  metadata:
+    cts_urn: urn:cts:greekLit:tlg0626.tlg002:52
   references:
     SvG:
     - start: 168
@@ -606,12 +614,16 @@ Fragment 53 (Heraklit):
   type: w
 Fragment 54 (Heraklit):
   author: Heraklit
+  metadata:
+    cts_urn: urn:cts:greekLit:tlg0626.tlg002:54
   references:
     GA 29/30:
     - start: 44
   type: w
 Fragment 93 (Heraklit):
   author: Heraklit
+  metadata:
+    cts_urn: urn:cts:greekLit:tlg0626.tlg002:93
   references:
     GA 29/30:
     - start: 40
