--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ django-tailwind @ https://github.com/andredelft/django-tailwind/tarball/master
 betacode==1.0
 pygtrie
 Django==4.*
+django-fullurl
 gunicorn==20.*
 whitenoise==5.*
 PyYAML==5.*
