Add URN to Fragment 53 (Heraklit) and modify description

--- a/index/heidegger-index.yml
+++ b/index/heidegger-index.yml
@@ -610,6 +610,8 @@ Fragment 52 (Heraklit):
   type: w
 Fragment 53 (Heraklit):
   author: Heraklit
+  metadata:
+    cts_urn: urn:cts:greekLit:tlg0626.tlg002:53
   references:
     EM:
     - start: 66
